templates: pre-arrival to fix reservation thumbnail is truncated on galaxy fold

--- a/pre_arrival/static/pre_arrival/scss/base.scss
+++ b/pre_arrival/static/pre_arrival/scss/base.scss
@@ -47,7 +47,8 @@ $reservation-radius: 10px;
 
 .reservation-container {
     margin: 0 auto 18px auto;
-    width: 340px;
+    width: 100%;
+    max-width: 340px;
     position: relative; 
 
     &.active {
@@ -71,7 +72,8 @@ $reservation-radius: 10px;
 
     .label-reservation {
         background-size: cover;
-        width: 340px; 
+        width: 100%; 
+        max-width: 340px;
         height: 172px;
         margin-bottom: 0;
         border-top-right-radius: $reservation-radius;
@@ -127,7 +129,8 @@ $reservation-radius: 10px;
     }
 
     .reservation-date {
-        width: 340px;
+        width: 100%;
+        max-width: 340px;
         margin: 0 auto;
         padding: 11px 20px;
         display: flex;
